--- a/app/src/main/res/layout/lv_item_algo.xml
+++ b/app/src/main/res/layout/lv_item_algo.xml
@@ -9,5 +9,6 @@
         style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:progress="0"
         tools:visibility="visible" />
 </LinearLayout>
