--- a/app/src/main/res/layout/activity_algorythm_dialog.xml
+++ b/app/src/main/res/layout/activity_algorythm_dialog.xml
@@ -3,29 +3,29 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textSize="24sp" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="Button" />
+        <Button
+            android:id="@+id/b_execute_thread"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:onClick="onClick"
+            android:text="Погнали!" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="0"
-        android:visibility="visible" />
+        <Switch
+            android:id="@+id/sw_thread"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:switchPadding="5dp"
+            android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
+            android:text="Генерировать потоки" />
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/lv_something"
