--- a/app/src/main/res/layout/lv_item_algo.xml
+++ b/app/src/main/res/layout/lv_item_algo.xml
@@ -6,7 +6,7 @@
 
     <ProgressBar
         android:id="@+id/progressBar2"
-        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:progress="0"
