--- a/app/src/main/res/layout/activity_spring.xml
+++ b/app/src/main/res/layout/activity_spring.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="onClick"
             android:text="Загрузить" />
 
         <Button
@@ -29,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="onClick"
             android:text="Добавить" />
 
         <Button
