--- a/app/src/main/res/layout/rv_item_spring.xml
+++ b/app/src/main/res/layout/rv_item_spring.xml
@@ -3,15 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="2dp"
     android:background="@android:color/holo_blue_bright"
-    android:padding="8dp">
+    android:padding="4dp">
 
     <TextView
         android:id="@+id/tv_spring"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_purple"
-        android:padding="4dp"
+        android:padding="6dp"
         android:singleLine="true"
         android:text="TextView"
         android:textColor="@android:color/background_light"
